--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@
 *.log
 *.log
 *.exp
+*.opensdf
+Federal++ Nice 4 Fun/Federal++ Nice 4 Fun.sdf
+*.sln
+Federal++ Nice 4 Fun/Federal++ Nice 4 Fun.v12.suo
+*.vcxproj
+Federal++ Nice 4 Fun/Federal++ Nice 4 Fun.vcxproj.filters
+*.user
+*.rar
